[rukmal] finished introduction

--- a/references.bib
+++ b/references.bib
@@ -52,6 +52,15 @@
     url = {https://wrds-web.wharton.upenn.edu/wrds/query_forms/navigation.cfm?navId=60}
 }
 
+@techreport{MSCIResearch2018ConsultationIndexes,
+    title = {{Consultation on Implementation of 2018 GICS Changes in the MSCI Equity Indexes}},
+    year = {2018},
+    author = {{MSCI Research}},
+    pages = {25},
+    url = {https://www.msci.com/documents/1296102/8328554/GICS2018Consultation.pdf/0f246611-27f7-4126-b7f0-02a9255724d5},
+    address = {New York}
+}
+
 @techreport{StandardPoorsRatingServices2014CorporateMethodology,
     title = {{Corporate Ratings Methodology}},
     year = {2014},
@@ -88,9 +97,32 @@
     address = {New York}
 }
 
+@misc{MSCI-MorganStanleyCapitalInternational2019GICSMSCI,
+    title = {{GICS - Global Industry Classification Standard - MSCI}},
+    year = {2019},
+    author = {{MSCI - Morgan Stanley Capital International}},
+    url = {https://www.msci.com/gics}
+}
+
 @techreport{GICS3,
     title = {{GICS {\textregistered} Global Industry Classification Standard 2 S{\&}amp;P Global Market Intelligence | MSCI Global Industry Classification Standard 3}},
     url = {www.spglobal.com/marketintelligence.}
+}
+
+@techreport{SPGlobalMarketIntelligence2018GlobalMethodology,
+    title = {{Global Industry Classification Standard - Methodology}},
+    year = {2018},
+    author = {{S{\&}P Global Market Intelligence}},
+    pages = {48},
+    url = {https://www.spglobal.com/marketintelligence/en/documents/112727-gics-mapbook_2018_v3_letter_digitalspreads.pdf},
+    address = {New York}
+}
+
+@misc{FTSEInternationalLimited2019IndustryRussell,
+    title = {{Industry Classification Benchmark (ICB) | FTSE Russell}},
+    year = {2019},
+    author = {{FTSE International Limited}},
+    url = {https://www.ftserussell.com/financial-data/industry-classification-benchmark-icb}
 }
 
 @techreport{Chan2007IndustryReturns,
@@ -104,6 +136,13 @@
     title = {{Insights Industry Classification Benchmark}},
     year = {2017},
     url = {https://www.ftserussell.com/sites/default/files/industry_classification_benchmark_insights.pdf}
+}
+
+@misc{FidelityInvestments2019KnowIndustries,
+    title = {{Know Your Sectors and Industries}},
+    year = {2019},
+    author = {{Fidelity Investments}},
+    url = {https://www.fidelity.com/learning-center/trading-investing/markets-sectors/know-your-sectors-and-industries}
 }
 
 @techreport{2018NASDAQ-100METHODOLOGY,
