[rukmal] finished research goals section

--- a/main.tex
+++ b/main.tex
@@ -49,13 +49,17 @@
 
 % Introduction
 \subfile{sections/introduction}
+
+% Research Goals
+\subfile{sections/research_goals}
+
 % Literature Review
 \subfile{sections/literature_review}
 
-%Feature Selection
+% Feature Selection
 \subfile{sections/feature_selection}
 
-%Hierarchical Clustering Model
+% Hierarchical Clustering Model
 \subfile{sections/hierarchical_clustering_model}
 
 % Appendices
