--- a/resources/header.tex
+++ b/resources/header.tex
@@ -2,6 +2,7 @@
 \usepackage{amsthm} % Math
 \usepackage{amsmath} % Math
 \usepackage{amssymb} % Math
+\usepackage[tikz]{bclogo} % Fancy boxes
 \usepackage[authordate, maxcitenames=1]{biblatex-chicago} % chicago bibliography style
 \usepackage{caption} % Captions
 \usepackage{csquotes} % For chicago bibliography style
