--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -52,7 +52,7 @@ Additionally, the GICS methodology specification indicates that sector assignmen
 
 \subsection{ICB - Industry Classification Benchmark}
 
-\begin{wrapfigure}[12]{r}{0.3\textwidth}
+\begin{wrapfigure}[12]{R}{0.3\textwidth}
     \centering
     \vspace{\wrapfigadjustment}
     \fbox{
@@ -75,7 +75,7 @@ As discussed above, both GICS and ICB utilize information from company prospectu
 
 Furthermore, the initial sector groups and constituent sectors in both classification schemes are defined based on a qualitative analysis of the economy, as opposed to a quantitatively-driven process. Similarly, the number of sectors in the market is also aribtrary, and not based on a quantifiable or objective metric.
 
-Additionally, as evidenced by the reorganization of the GICS classification scheme in 2018, there appears to be no stong objective criteria governing the creation and deletion of new sectors. The companies reassigned during this reorganization were not new, and imply that the underlying newly created sector existed before its recognition by the GICS scheme.
+Additionally, as implied by the reorganization of the GICS classification scheme in 2018, there appears to be no stong objective criteria governing the creation and deletion of new sectors. The companies reassigned during this reorganization were not new, and imply that the underlying newly created sector existed before its recognition by the GICS scheme.
 
 As evidenced by the short list of limitations outlined in this section, the status quo of market sector classificaitons are far from perfect. To this end, we hope to develop a new \textit{Learned Sectors} scheme, addressing each of the limitations described above.
 
