[rukmal] finished candidate sector universe ranking intro; ready to discuss reindexer now

--- a/main.tex
+++ b/main.tex
@@ -59,8 +59,26 @@
 % Feature Selection
 \subfile{sections/feature_selection}
 
+% Unsupervised Learning Methods Survey
+\subfile{sections/unsupervised_learning_methods_survey}
+
 % Hierarchical Clustering Model
 \subfile{sections/hierarchical_clustering_model}
+
+% Candidate Universe Ranking
+\subfile{sections/candidate_universe_ranking}
+
+% Optimal Sector Universes
+\subfile{sections/optimal_sector_universes}
+
+% Benchmark Comparison
+\subfile{sections/benchmark_comparison}
+
+% Conclusion
+\subfile{sections/conclusion}
+
+% Future work
+\subfile{sections/future_work}
 
 % Appendices
 \newpage
