--- a/references.bib
+++ b/references.bib
@@ -161,6 +161,20 @@
     isbn = {9780875846729}
 }
 
+@article{Markowitz1952PortfolioSelection,
+    title = {{Portfolio Selection}},
+    year = {1952},
+    journal = {The Journal of Finance},
+    author = {Markowitz, Harry},
+    number = {1},
+    month = {3},
+    pages = {77--91},
+    volume = {7},
+    publisher = {John Wiley {\&} Sons, Ltd (10.1111)},
+    url = {http://doi.wiley.com/10.1111/j.1540-6261.1952.tb01525.x},
+    doi = {10.1111/j.1540-6261.1952.tb01525.x}
+}
+
 @techreport{FitchRatings2019ProceduresRatings,
     title = {{Procedures and Methodologies for Determining Credit Ratings}},
     year = {2019},
