--- a/sections/research_goals.tex
+++ b/sections/research_goals.tex
@@ -30,7 +30,7 @@ However, a shortcoming of this approach is that we will have a clustering algori
 
 Finally, we hope to evaluate our sector classification against a benchmark sector universe; the \textit{GICS S\&P 500 Sector Classification} (hereafter \textit{the benchmark}). To do this, we will use the same metric(s) utilized in ranking the candidate sector universes, and maintain any specific methodology used to compute those rankings between the \textit{best} Learned Sector Universe, and the benchmark. If our initial hypothesis is correct, the superior risk diversification benefit inherent to our fundamentals-driven sector divisions will lead our Learned Sector Unvierse to ourperform the benchmark with respect to the evaluation metric.
 
-\section{Specific Research Goals}
+\section{Specific Research Goals} \label{research_goals:specific_research_goals}
 
 Here, we encapsulate the gist of the previous discussion of our thesis statement in a collection of specific research goals. We will then address each of these research goals in sequence through the rest of the report, thereby fully exploring the scope of our thesis statement in the process.
 
