--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -18,7 +18,7 @@ The Securities and Exchange Commission (SEC) of the United States classifies eve
 
 Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
-Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets. This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
+Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets.\citeFormat{\cite{Markowitz1952PortfolioSelection}} This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
 
 \section{Status Quo}
 
@@ -52,7 +52,7 @@ Additionally, the GICS methodology specification indicates that sector assignmen
 
 \subsection{ICB - Industry Classification Benchmark}
 
-\begin{wrapfigure}[12]{R}{0.3\textwidth}
+\begin{wrapfigure}[11]{R}{0.3\textwidth}
     \centering
     \vspace{\wrapfigadjustment}
     \fbox{
