[Yuzhen]Edit Optimal_Sector_Universes

--- a/sections/candidate_universe_ranking.tex
+++ b/sections/candidate_universe_ranking.tex
@@ -45,4 +45,18 @@ Due to this fact, is would be extremely difficult to perform a sector-by-sector 
 
 To combat this issue, we decided to evaluate the sector universes as a whole, and then analyze universe-level metrics to rank the candidate learned sectors. To this end, we developed \textit{reIndexer}, which is discussed at length in the following section.
 
+\section{reIndexer}
+
+\begin{wrapfigure}[18]{r}{0.4\textwidth}
+    \centering
+    \vspace{\wrapfigadjustment}
+    \fbox{
+    \includegraphics[width=0.38\textwidth]{images/reIndexer_logo.png}
+    }
+    \caption{The \textit{reIndexer} research tool.}
+    \label{fig:candidate_universe_ranking:reindexer_logo}
+\end{wrapfigure}
+
+\textit{reIndexer} is a research tool for backtest-driven evaluation of different sector universes, using a system of Synthetic ETFs (hereafter \textit{SETF}), and efficient portfolios of those SETFs.
+
 \end{document}
