[Yuzhen]Add paragraph in Optimal_Sector_Universes

--- a/references.bib
+++ b/references.bib
@@ -184,6 +184,14 @@
     address = {New York}
 }
 
+@misc{Weerawarana2019ReIndexerUniverses,
+    title = {{reIndexer - A Research Tool for Backtest-Driven Evaluation of Different Sectorization Universes}},
+    year = {2019},
+    author = {Weerawarana, Rukmal},
+    url = {https://git.rukmal.me/reIndexer},
+    address = {New York}
+}
+
 @techreport{Sifma2018SIFMAPrimer,
     title = {{SIFMA Insights - US ETF Market Structure Primer}},
     year = {2018},
