--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -18,3 +18,21 @@
     name=Sector Universe,
     description={A specific sector classification taxonomy, such as the GICS (Global Inudstry Classifciation Standard), or the ICB (Industry Classification Benchmark)}
 }
+
+\newglossaryentry{setf}
+{
+    name=SETF,
+    description={Synthetic Exchange Traded Fund; a hypothetical asset, used in backtesting simulations by the \textit{reIndexer} research tool}
+}
+
+\newglossaryentry{reindexer}
+{
+    name=reIndexer,
+    description={Research tool for backtest-driven evaluation of different sectorization universes, using a system of synthetic ETFs, and efficient portfolios of those synthetic ETFs}
+}
+
+\newglossaryentry{benchmark_universe}
+{
+    name=Benchmark Universe,
+    description={For this project, the benchmark sector classification unvierse is the \textit{GICS S\&P 500 Classification}}
+}
