--- a/sections/candidate_universe_ranking.tex
+++ b/sections/candidate_universe_ranking.tex
@@ -57,6 +57,6 @@ To combat this issue, we decided to evaluate the sector universes as a whole, an
     \label{fig:candidate_universe_ranking:reindexer_logo}
 \end{wrapfigure}
 
-\textit{reIndexer} is a research tool for backtest-driven evaluation of different sector universes, using a system of Synthetic ETFs (hereafter \textit{SETF}), and efficient portfolios of those SETFs.
+\textit{reIndexer}\citeFormat{\cite{Weerawarana2019ReIndexerUniverses}} is a research tool for backtest-driven evaluation of different sector universes, using a system of Synthetic ETFs (hereafter \textit{SETF}), and efficient portfolios of those SETFs. reIndexer was designed and implemented to solve the problem discussed in the previous section; namely, the fact that we cannot perform a sector-by-sector comparison, and thus must compare learned sectors at the universe-level. In this section, we will explain the functionality of reIndexer, and discuss the metrics used to rank the candidate universes.
 
 \end{document}
