--- a/sections/optimal_sector_universes.tex
+++ b/sections/optimal_sector_universes.tex
@@ -4,6 +4,8 @@
     
 \chapter{Optimal Sector Universes}
 
+In this chapter we show the backtesting results of our Learned Sectors. We also list optimal sector universes under different criteria and their visualizations. Then we analyze some characteristics of optimal sector universes and explain why we choose optimal sector universes of maximum Sharpe Ratio to be comparison with benchmark. 
+
 \section{Backtesting Results}
 
 In pervious chapter we develop a Python packege to implement the backtesting of sector universes. Then we do backtesting with sector universes we gennerate from Chapter 5 and collect data for 60 sector universes. We plot graphs of cumulative ETF restructuring turnover, cumulative portfolio rebalancing turnover, portfolio return and portfolio Sharpe Ratio over time respectively. 
